--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -34,11 +34,11 @@
                  <SearchField id="headtabSearch" liveChange="handleSearch" placeholder="Unique/Primary ID" width="300px"/>     
                 </VBox>
                     <VBox class="locClass">
-                        <Label text="Location" required="true" width="250px"/>
+                        <Label text="Demand Location" required="true" width="250px"/>
                         <Input id="PDFlocInput" width="250px" placeholder="Location" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleValueHelp" />
                     </VBox>
                     <VBox class="VBoxWidth">
-                        <Label text="Configurable Product" required="true" width="300px"/>
+                        <Label text="All Products" required="true" width="300px"/>
                          <MultiInput width="300px" id="PDFprodInput" placeholder="Product" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleValueHelp" tokenUpdate="handleTokenUpdate" enabled="true" />
                     </VBox>
                     <HBox class="VBoxWidth1">
@@ -68,12 +68,16 @@
                     <Column id="_IDGenColumn22" hAlign="Center" vAlign="Middle">
                         <Text id="_IDGenText22" text="Primary ID"/>
                     </Column>
+                     <Column id="_IDGenColumn23" hAlign="Center" vAlign="Middle">
+                        <Text id="_IDGenText23" text="Unique Description"/>
+                    </Column>
                 </columns>
                 <items>
                     <ColumnListItem id="_IDGenColumnListItem11">
                         <cells>
                             <ObjectIdentifier  text="{UNIQUE_ID}" />
                             <ObjectIdentifier  text="{PRIMARY_ID}"/>
+                            <ObjectIdentifier  text="{UNIQUE_DESC}"/>
                         </cells>
                     </ColumnListItem>
                 </items>
