--- a/webapp/view/ProdDialog.fragment.xml
+++ b/webapp/view/ProdDialog.fragment.xml
@@ -1,5 +1,5 @@
 <core:FragmentDefinition xmlns="sap.m" xmlns:core="sap.ui.core">
-	<SelectDialog id="prodSlctListJS" title="Products" rememberSelections="false" search="handleSearch" liveChange="handleSearch"
+	<SelectDialog id="prodSlctListLPU" title="Products" rememberSelections="false" search="handleSearch" liveChange="handleSearch"
 		confirm="handleSelection" cancel="handleClose" multiSelect="false"  contentWidth="375px" items="{path:'/prodDetails',sorter:{path:'PRODUCT_ID'} }" 
         selectionChange="handleProdChange" growing="false">
 		<StandardListItem title="{PRODUCT_ID}" description="{PROD_DESC}" info="{REF_PRODID}" type="Active"/>
